fixed: labels with words longer the form width, overlap with other form elements,
https://github.com/kobotoolbox/enketo-express/issues/1100

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -60,6 +60,7 @@ $media-margin: 10px;
         }
     }
     .question-label {
+        word-break: break-word;
         display: inline-block; // to ensure that comment icons are displayed next to multi-line labels and not below
     }
 }
