--- a/src/sass/grid/_main.scss
+++ b/src/sass/grid/_main.scss
@@ -179,7 +179,7 @@ h4+.or-repeat {
         text-transform: uppercase;
         font-weight: normal;
         font-size: 12px;
-        width: calc(100% - 25px);
+        width: calc(100% - 30px);
         order: 1;
     }
 
